Osnovna angular aplikacija

Pred spremembami