@@ -1,0 +1,63 @@
+.osrednji {
+    /* min-width: 50vh;
+    min-height: 50vh; */
+    width: 500px;
+    margin: 0 auto;
+    text-align: center;
+    border: 1px solid #d7d7d7;
+    font-family: sans-serif;
+    border-bottom: 0;
+    margin-top:20px;
+}
+
+h1 {
+    background-color: #5c8297;
+    padding: 30px 0;
+    margin-top: 0;
+    color: white;
+    text-align: center;
+}
+
+button {
+    cursor: pointer;
+}
+
+.dodajNalogo button {
+    height: 45px;
+    width: 50px;
+    padding: 5px;
+}
+
+.dodajBesedilo {
+    width: 80%;
+    height: 30px;
+    padding: 5px;
+    font-size: 20px; 
+}
+
+.dodajNalogo {
+    position: relative;
+    padding-bottom: 0;
+    height: 30px;
+}
+
+ul {
+    list-style: none;
+    font-size: 20px;
+    color: #686868;
+    margin-left: -40px;
+    margin-bottom: 0;
+}
+
+li {
+    border-bottom: 1px solid #b7b7b7;
+    background-color: #d7d7d7;
+    padding: 10px 0;
+    margin-bottom: 5px;
+}
+
+li button {
+    position: relative;
+    float: right;
+    margin-right: 10px;
+}
