@@ -1,49 +1,20 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <p>To pa je moj objekt: {{mojObjekt.lastnost1}} {{mojObjekt.lastnost2}} {{mojObjekt}}</p>
+<div class="osrednji">
+  <h1>Naloge:</h1>
+  <div class="dodajNalogo">
+    <input [(ngModel)] = "novaNaloga" placeholder="Dodaj nalogo" class="dodajBesedilo">
+    <button (click)="dogodekDodajanja($event)" >Dodaj</button>
+  </div>
 
-  <p>{{matrika[0]}}</p>
-  <p>{{matrika[1]}}</p>
-  <p>{{matrika[2]}}</p>
-
-  <ol>
-    <li *ngFor="let i of matrika">elementek: {{i}}</li>
-  </ol>
-
-  <p *ngIf="zastavica; else prviTemplate">Moje ime je {{mojeIme}}</p>
-  <p *ngIf="zastavica; then drugiTemplate else prviTemplate">Moje ime je {{mojeIme}}</p>
-  <ng-template #prviTemplate>To je moj prvi template</ng-template>
-  <ng-template #drugiTemplate>To je moj drugi template</ng-template>
-  <p *ngIf="mojeIme === 'David'">Ti pa si David!</p>
-
- 
-
-  <img width="300" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNTAgMjUwIj4KICAgIDxwYXRoIGZpbGw9IiNERDAwMzEiIGQ9Ik0xMjUgMzBMMzEuOSA2My4ybDE0LjIgMTIzLjFMMTI1IDIzMGw3OC45LTQzLjcgMTQuMi0xMjMuMXoiIC8+CiAgICA8cGF0aCBmaWxsPSIjQzMwMDJGIiBkPSJNMTI1IDMwdjIyLjItLjFWMjMwbDc4LjktNDMuNyAxNC4yLTEyMy4xTDEyNSAzMHoiIC8+CiAgICA8cGF0aCAgZmlsbD0iI0ZGRkZGRiIgZD0iTTEyNSA1Mi4xTDY2LjggMTgyLjZoMjEuN2wxMS43LTI5LjJoNDkuNGwxMS43IDI5LjJIMTgzTDEyNSA1Mi4xem0xNyA4My4zaC0zNGwxNy00MC45IDE3IDQwLjl6IiAvPgogIDwvc3ZnPg==">
+  <ul>
+    <li *ngFor="let i of naloge; let ind = index">{{i}}<button (click)="dogodekBrisanja(ind)">x</button></li>
+  </ul>
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul>
 
-<a routerLink="/member">Member</a>
-<a routerLink="/product">Product</a>
-
-<app-moja-lepa-komponenta>Moja lepa komponenta: </app-moja-lepa-komponenta>
-<!-- <app-product>
-
-</app-product>
-<app-members>
-
-</app-members> -->
-<router-outlet></router-outlet>
+<h2>{{name | lowercase}}</h2>
+<h2>{{name | uppercase}}</h2>
+<h2>{{datum}}</h2>
+<h2>{{datum | date}}</h2>
+<h2>{{datum | date: 'shortDate'}}</h2>
+<h2>{{datum | date: 'fullDate' | uppercase}}</h2>
+<h2>To bo seznam števil:</h2>
+<h2>{{seznam | sort: 'descending'}}</h2>
