@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>Moj fake dummy tekst juhu
+  <app-root>Loading...</app-root>
 </body>
 </html>
